Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/WatchStock__c.object-meta.xml
<CustomObject>
    <label>WatchStock</label>
    <nameField>
        <displayFormat>WS-{00000}</displayFormat>
        <label>WatchStock</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WatchStock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>