Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/AvgVol3M__c.field-meta.xml
<CustomField>
    <fullName>AvgVol3M__c</fullName>
    <label>AvgVol3M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>