Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalCNBCCash__c.field-meta.xml
<CustomField>
    <fullName>CalCNBCCash__c</fullName>
    <formula>IF(LEN(TEXT( CNBCCash__c )) &gt;= 10,
&apos;$ &apos; + TEXT( ROUND( CNBCCash__c /1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( CNBCCash__c )) &gt;= 7,
&apos;$ &apos; + TEXT( ROUND( CNBCCash__c /1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(CNBCCash__c )) &gt;= 4,
&apos;$ &apos; + TEXT(ROUND(CNBCCash__c /1000, 2))+&apos; K&apos;,TEXT(CNBCCash__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNBCCash</label>
    <type>Text</type>
</CustomField>