Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalCNBCDebt__c.field-meta.xml
<CustomField>
    <fullName>CalCNBCDebt__c</fullName>
    <formula>IF(LEN(TEXT( CNBCDebt__c )) &gt;= 10,
&apos;$ &apos; + TEXT( ROUND( CNBCDebt__c /1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( CNBCDebt__c )) &gt;= 7,
&apos;$ &apos; + TEXT( ROUND( CNBCDebt__c /1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(CNBCDebt__c )) &gt;= 4,
&apos;$ &apos; + TEXT(ROUND(CNBCDebt__c /1000, 2))+&apos; K&apos;,TEXT(CNBCDebt__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNBCDebt</label>
    <type>Text</type>
</CustomField>