Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalCNBCIncome__c.field-meta.xml
<CustomField>
    <fullName>CalCNBCIncome__c</fullName>
    <formula>IF(LEN(TEXT( CNBCIncome__c)) &gt;= 10,
&apos;$ &apos; + TEXT( ROUND( CNBCIncome__c/1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( CNBCIncome__c )) &gt;= 7,
&apos;$ &apos; + TEXT( ROUND( CNBCIncome__c/1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(CNBCIncome__c)) &gt;= 4,
&apos;$ &apos; + TEXT(ROUND(CNBCIncome__c/1000, 2))+&apos; K&apos;,TEXT(CNBCIncome__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNBCIncome</label>
    <type>Text</type>
</CustomField>