Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalCompanyName__c.field-meta.xml
<CustomField>
    <fullName>CalCompanyName__c</fullName>
    <formula>HYPERLINK(&quot;https://finance.yahoo.com/quote/&quot; + Symbol__c, CompanyName__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompanyName</label>
    <type>Text</type>
</CustomField>