Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalMarketCap__c.field-meta.xml
<CustomField>
    <fullName>CalMarketCap__c</fullName>
    <formula>IF(LEN(TEXT( MarketCap__c )) &gt;= 10,
&apos;$ &apos; + TEXT( ROUND( MarketCap__c /1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( MarketCap__c )) &gt;= 7,
&apos;$ &apos; + TEXT( ROUND( MarketCap__c /1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(MarketCap__c )) &gt;= 4,
&apos;$ &apos; + TEXT(ROUND(MarketCap__c /1000, 2))+&apos; K&apos;,TEXT(MarketCap__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarketCap</label>
    <type>Text</type>
</CustomField>