Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalMergerDate__c.field-meta.xml
<CustomField>
    <fullName>CalMergerDate__c</fullName>
    <formula>IF( ! ISBLANK( MergerDate__c ), TEXT(MONTH(DATEVALUE(MergerDate__c )))+&quot;/&quot; +TEXT(DAY(DATEVALUE(MergerDate__c )))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(MergerDate__c ))), TEXT(QYMergerDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MergerDate</label>
    <type>Text</type>
</CustomField>