Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalRevenue__c.field-meta.xml
<CustomField>
    <fullName>CalRevenue__c</fullName>
    <formula>IF(LEN(TEXT( Revenue__c )) &gt;= 10,
&apos;$ &apos; + TEXT( ROUND( Revenue__c /1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( Revenue__c )) &gt;= 7,
&apos;$ &apos; + TEXT( ROUND( Revenue__c  /1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(Revenue__c  )) &gt;= 4,
&apos;$ &apos; + TEXT(ROUND(Revenue__c /1000, 2))+&apos; K&apos;,TEXT(Revenue__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue</label>
    <type>Text</type>
</CustomField>