Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalSymbolURL__c.field-meta.xml
<CustomField>
    <fullName>CalSymbolURL__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; &amp; Id  , Symbol__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Symbol</label>
    <type>Text</type>
</CustomField>