Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalTotalCash__c.field-meta.xml
<CustomField>
    <fullName>CalTotalCash__c</fullName>
    <formula>IF(LEN(TEXT(  TotalCash__c )) &gt;= 10,
&apos;$ &apos; + TEXT( ROUND( TotalCash__c  /1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( TotalCash__c )) &gt;= 7,
&apos;$ &apos; + TEXT( ROUND( TotalCash__c /1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(TotalCash__c )) &gt;= 4,
&apos;$ &apos; + TEXT(ROUND(TotalCash__c /1000, 2))+&apos; K&apos;,TEXT(TotalCash__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalCash</label>
    <type>Text</type>
</CustomField>