Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalTotalDebt__c.field-meta.xml
<CustomField>
    <fullName>CalTotalDebt__c</fullName>
    <formula>IF(LEN(TEXT(   TotalDebt__c )) &gt;= 10,
&apos;$ &apos; + TEXT( ROUND( TotalDebt__c /1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( TotalDebt__c )) &gt;= 7,
&apos;$ &apos; + TEXT( ROUND( TotalDebt__c /1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(TotalDebt__c )) &gt;= 4,
&apos;$ &apos; + TEXT(ROUND(TotalDebt__c /1000, 2))+&apos; K&apos;,TEXT(TotalDebt__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalDebt</label>
    <type>Text</type>
</CustomField>