Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CalVolume__c.field-meta.xml
<CustomField>
    <fullName>CalVolume__c</fullName>
    <formula>IF(LEN(TEXT( Volume__c )) &gt;= 10,
TEXT( ROUND( Volume__c /1000000000, 2) )+&apos; B&apos;,
IF(LEN(TEXT( Volume__c )) &gt;= 7,
TEXT( ROUND( Volume__c /1000000, 2) )+&apos; M&apos;,
IF(LEN(TEXT(Volume__c )) &gt;= 4,
TEXT(ROUND(Volume__c /1000, 2))+&apos; K&apos;,TEXT(Volume__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volume</label>
    <type>Text</type>
</CustomField>