Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CashPerShare__c.field-meta.xml
<CustomField>
    <fullName>CashPerShare__c</fullName>
    <label>CashPerShare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>