Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/Change__c.field-meta.xml
<CustomField>
    <fullName>Change__c</fullName>
    <label>Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>