Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCCash__c.field-meta.xml
<CustomField>
    <fullName>CNBCCash__c</fullName>
    <label>CNBCCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>