Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCCPS__c.field-meta.xml
<CustomField>
    <fullName>CNBCCPS__c</fullName>
    <label>CNBCCPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>