Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCDebt__c.field-meta.xml
<CustomField>
    <fullName>CNBCDebt__c</fullName>
    <label>CNBCDebt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>