Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCIncome__c.field-meta.xml
<CustomField>
    <fullName>CNBCIncome__c</fullName>
    <label>CNBCIncome</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>