Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCIncomeQtr__c.field-meta.xml
<CustomField>
    <fullName>CNBCIncomeQtr__c</fullName>
    <label>CNBCIncomeQtr</label>
    <type>Date</type>
</CustomField>