Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCRSI__c.field-meta.xml
<CustomField>
    <fullName>CNBCRSI__c</fullName>
    <formula>( TradeClose__c -  CNBCCPS__c  )/TradeClose__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNBCRSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>