Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCShares__c.field-meta.xml
<CustomField>
    <fullName>CNBCShares__c</fullName>
    <label>CNBCShares</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>