Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/CNBCURL__c.field-meta.xml
<CustomField>
    <fullName>CNBCURL__c</fullName>
    <formula>HYPERLINK(&quot;https://www.cnbc.com/quotes/?symbol=&quot; + Symbol__c, &quot;CNBC - Home&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNBCURL</label>
    <type>Text</type>
</CustomField>