Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/DayRange__c.field-meta.xml
<CustomField>
    <fullName>DayRange__c</fullName>
    <label>DayRange</label>
    <length>100</length>
    <type>Text</type>
</CustomField>