Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/DividendDate__c.field-meta.xml
<CustomField>
    <fullName>DividendDate__c</fullName>
    <label>DividendDate</label>
    <type>Date</type>
</CustomField>