Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/DividendRate__c.field-meta.xml
<CustomField>
    <fullName>DividendRate__c</fullName>
    <label>DividendRate</label>
    <precision>17</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>