Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/EarningDt__c.field-meta.xml
<CustomField>
    <fullName>EarningDt__c</fullName>
    <label>EarningDt</label>
    <type>DateTime</type>
</CustomField>