Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/ErrorFlag__c.field-meta.xml
<CustomField>
    <fullName>ErrorFlag__c</fullName>
    <label>ErrorFlag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>