Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/ErrorMsg__c.field-meta.xml
<CustomField>
    <fullName>ErrorMsg__c</fullName>
    <label>ErrorMsg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>