Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/ExDividendDate__c.field-meta.xml
<CustomField>
    <fullName>ExDividendDate__c</fullName>
    <label>ExDividendDate</label>
    <type>Date</type>
</CustomField>