Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/FTWRange__c.field-meta.xml
<CustomField>
    <fullName>FTWRange__c</fullName>
    <label>FTWRange</label>
    <length>100</length>
    <type>Text</type>
</CustomField>