Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/HighReachedOn__c.field-meta.xml
<CustomField>
    <fullName>HighReachedOn__c</fullName>
    <label>HighReachedOn</label>
    <type>Date</type>
</CustomField>