Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/IPODate__c.field-meta.xml
<CustomField>
    <fullName>IPODate__c</fullName>
    <label>IPODate</label>
    <type>Date</type>
</CustomField>