Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/LastNewsUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastNewsUpdate__c</fullName>
    <label>LastNewsUpdate</label>
    <type>DateTime</type>
</CustomField>