Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/LastOptionsUpdate__c.field-meta.xml
<CustomField>
    <fullName>LastOptionsUpdate__c</fullName>
    <label>LastOptionsUpdate</label>
    <type>DateTime</type>
</CustomField>