Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/LastSplitDate__c.field-meta.xml
<CustomField>
    <fullName>LastSplitDate__c</fullName>
    <label>LastSplitDate</label>
    <type>Date</type>
</CustomField>