Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/LastSplitFactor__c.field-meta.xml
<CustomField>
    <fullName>LastSplitFactor__c</fullName>
    <label>LastSplitFactor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>