Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/LastTradeDate__c.field-meta.xml
<CustomField>
    <fullName>LastTradeDate__c</fullName>
    <label>LastTradeDate</label>
    <type>DateTime</type>
</CustomField>