Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/LowerLimit__c.field-meta.xml
<CustomField>
    <fullName>LowerLimit__c</fullName>
    <label>LowerLimit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>