Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/LowReachedOn__c.field-meta.xml
<CustomField>
    <fullName>LowReachedOn__c</fullName>
    <label>LowReachedOn</label>
    <type>Date</type>
</CustomField>