Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/MarketCap__c.field-meta.xml
<CustomField>
    <fullName>MarketCap__c</fullName>
    <label>MarketCap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>