Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/MergerAnnouncement__c.field-meta.xml
<CustomField>
    <fullName>MergerAnnouncement__c</fullName>
    <label>MergerAnnouncement</label>
    <type>Date</type>
</CustomField>