Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/MergerCompany__c.field-meta.xml
<CustomField>
    <fullName>MergerCompany__c</fullName>
    <label>MergerCompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>