Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/MergerDate__c.field-meta.xml
<CustomField>
    <fullName>MergerDate__c</fullName>
    <label>MergerDate</label>
    <type>DateTime</type>
</CustomField>