Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/MergerSymbol__c.field-meta.xml
<CustomField>
    <fullName>MergerSymbol__c</fullName>
    <label>MergerSymbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>