Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/Monitor__c.field-meta.xml
<CustomField>
    <fullName>Monitor__c</fullName>
    <label>Monitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>