Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/PercentChange__c.field-meta.xml
<CustomField>
    <fullName>PercentChange__c</fullName>
    <label>PercentChange</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>