Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/PrevClose__c.field-meta.xml
<CustomField>
    <fullName>PrevClose__c</fullName>
    <label>PrevClose</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>