Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/QYMergerDate__c.field-meta.xml
<CustomField>
    <fullName>QYMergerDate__c</fullName>
    <label>MergerDate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1 2021</fullName>
            </value>
            <value>
                <fullName>Q2 2021</fullName>
            </value>
            <value>
                <fullName>Q3 2021</fullName>
            </value>
            <value>
                <fullName>Q4 2021</fullName>
            </value>
            <value>
                <fullName>Q4 2020</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>