Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/ReachedLowerLimit__c.field-meta.xml
<CustomField>
    <fullName>ReachedLowerLimit__c</fullName>
    <formula>TradeClose__c &lt;  LowerLimit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ReachedLowerLimit</label>
    <type>Checkbox</type>
</CustomField>