Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/RSI__c.field-meta.xml
<CustomField>
    <fullName>RSI__c</fullName>
    <formula>( TradeClose__c -  CashPerShare__c )/TradeClose__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>