Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/SharesFloat__c.field-meta.xml
<CustomField>
    <fullName>SharesFloat__c</fullName>
    <label>SharesFloat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>