Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/SharesOutstanding__c.field-meta.xml
<CustomField>
    <fullName>SharesOutstanding__c</fullName>
    <label>SharesOutstanding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>