Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/SharesShort__c.field-meta.xml
<CustomField>
    <fullName>SharesShort__c</fullName>
    <label>SharesShort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>