Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/ShortPercent__c.field-meta.xml
<CustomField>
    <fullName>ShortPercent__c</fullName>
    <formula>SharesShort__c/SharesFloat__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShortPercent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>