Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/SNPRank__c.field-meta.xml
<CustomField>
    <fullName>SNPRank__c</fullName>
    <label>SNPRank</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>