Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/SPAC__c.field-meta.xml
<CustomField>
    <fullName>SPAC__c</fullName>
    <label>SPAC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>