Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/Split__c.field-meta.xml
<CustomField>
    <fullName>Split__c</fullName>
    <label>Split</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>