Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/Symbol__c.field-meta.xml
<CustomField>
    <fullName>Symbol__c</fullName>
    <label>Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>