Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TotalCash__c.field-meta.xml
<CustomField>
    <fullName>TotalCash__c</fullName>
    <label>TotalCash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>