Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TotalDebt__c.field-meta.xml
<CustomField>
    <fullName>TotalDebt__c</fullName>
    <label>TotalDebt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>