Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TradeClose__c.field-meta.xml
<CustomField>
    <fullName>TradeClose__c</fullName>
    <label>TradeClose</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>