Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TwoYearsRange__c.field-meta.xml
<CustomField>
    <fullName>TwoYearsRange__c</fullName>
    <label>TwoYearsRange</label>
    <length>100</length>
    <type>Text</type>
</CustomField>