Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TwoYrsHigh__c.field-meta.xml
<CustomField>
    <fullName>TwoYrsHigh__c</fullName>
    <label>TwoYrsHigh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>