Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TwoYrsHighReachedOn__c.field-meta.xml
<CustomField>
    <fullName>TwoYrsHighReachedOn__c</fullName>
    <label>TwoYrsHighReachedOn</label>
    <type>Date</type>
</CustomField>