Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TwoYrsLow__c.field-meta.xml
<CustomField>
    <fullName>TwoYrsLow__c</fullName>
    <label>TwoYrsLow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>