Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/TwoYrsLowReachedOn__c.field-meta.xml
<CustomField>
    <fullName>TwoYrsLowReachedOn__c</fullName>
    <label>TwoYrsLowReachedOn</label>
    <type>Date</type>
</CustomField>