Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/YearHigh__c.field-meta.xml
<CustomField>
    <fullName>YearHigh__c</fullName>
    <label>YearHigh</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>