Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/YearLow__c.field-meta.xml
<CustomField>
    <fullName>YearLow__c</fullName>
    <label>YearLow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>