Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/fields/ZacksRank__c.field-meta.xml
<CustomField>
    <fullName>ZacksRank__c</fullName>
    <label>ZacksRank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>