Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/listViews/My_Buy_List.listView-meta.xml
<ListView>
    <fullName>My_Buy_List</fullName>
    <columns>CalSymbolURL__c</columns>
    <columns>CalCompanyName__c</columns>
    <columns>PrevClose__c</columns>
    <columns>DayRange__c</columns>
    <columns>TradeClose__c</columns>
    <columns>Change__c</columns>
    <columns>PercentChange__c</columns>
    <columns>Volume__c</columns>
    <columns>CalMarketCap__c</columns>
    <columns>CalMergerDate__c</columns>
    <columns>Notes__c</columns>
    <columns>MergerSymbol__c</columns>
    <columns>FTWRange__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Buy__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>My Buy List</label>
</ListView>