Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/listViews/My_Watch_List.listView-meta.xml
<ListView>
    <fullName>My_Watch_List</fullName>
    <columns>CalSymbolURL__c</columns>
    <columns>CalCompanyName__c</columns>
    <columns>PrevClose__c</columns>
    <columns>DayRange__c</columns>
    <columns>TradeClose__c</columns>
    <columns>Change__c</columns>
    <columns>PercentChange__c</columns>
    <columns>Volume__c</columns>
    <columns>MarketCap__c</columns>
    <columns>CashPerShare__c</columns>
    <columns>LowReachedOn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Monitor__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>My Watch List</label>
</ListView>