Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/listViews/OverSold.listView-meta.xml
<ListView>
    <fullName>OverSold</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CalSymbolURL__c</columns>
    <columns>TradeClose__c</columns>
    <columns>CashPerShare__c</columns>
    <columns>RSI__c</columns>
    <columns>FTWRange__c</columns>
    <columns>CalCompanyName__c</columns>
    <columns>DayRange__c</columns>
    <columns>Change__c</columns>
    <columns>PercentChange__c</columns>
    <columns>CalMarketCap__c</columns>
    <columns>LowReachedOn__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RSI__c</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CNBCRSI__c</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </filters>
    <label>OverSold</label>
</ListView>