Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/listViews/Reached_Lower_Limits.listView-meta.xml
<ListView>
    <fullName>Reached_Lower_Limits</fullName>
    <columns>CalSymbolURL__c</columns>
    <columns>CalCompanyName__c</columns>
    <columns>PrevClose__c</columns>
    <columns>DayRange__c</columns>
    <columns>Change__c</columns>
    <columns>TradeClose__c</columns>
    <columns>LowerLimit__c</columns>
    <columns>PercentChange__c</columns>
    <columns>Volume__c</columns>
    <columns>CalMarketCap__c</columns>
    <columns>CashPerShare__c</columns>
    <columns>LowReachedOn__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReachedLowerLimit__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Reached Lower Limits</label>
</ListView>