Documents/PackageXMLProject/force-app/main/default/objects/WatchStock__c/listViews/Review_SPAC.listView-meta.xml
<ListView>
    <fullName>Review_SPAC</fullName>
    <booleanFilter>1 AND 2 and 3</booleanFilter>
    <columns>CalSymbolURL__c</columns>
    <columns>CalCompanyName__c</columns>
    <columns>TradeClose__c</columns>
    <columns>Change__c</columns>
    <columns>PercentChange__c</columns>
    <columns>DayRange__c</columns>
    <columns>FTWRange__c</columns>
    <columns>Ignore__c</columns>
    <columns>Notes__c</columns>
    <columns>Volume__c</columns>
    <columns>MergerPending__c</columns>
    <columns>CalMarketCap__c</columns>
    <columns>MergerDate__c</columns>
    <columns>MergerAnnouncement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPAC__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Buy__c</field>
        <operation>equals</operation>
        <value>No</value>
    </filters>
    <filters>
        <field>MergerComplete__c</field>
        <operation>notEqual</operation>
        <value>Yes</value>
    </filters>
    <label>Review SPAC</label>
</ListView>